--- a/test.html
+++ b/test.html
@@ -5,10 +5,11 @@
     <head>
         <title>Tutorials Curated</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="test_styles.css">
     </head>
     <body>
-        <div>
+        <div class="box_model">
+            CSS
         </div>
     </body>
 </html>
