--- a/flex/02-flex/02-flex.html
+++ b/flex/02-flex/02-flex.html
@@ -1,10 +1,53 @@
-<link rel="stylesheet" href="./styles.css">
-<div class="box">
-    <div class="one">One</div>
-    <div class="two">Two</div>
-    <div class="three">Three
-        <br>some
-        <br>more
-        <br>text
-    </div>
-</div>
+<!--02-flex-->
+<!DOCTYPE html>
+<html land="en">
+    <!--head-->
+    <head>
+        <title>A Basic Header</title>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <!--<meta name="viewport" content="width=device-width, initial-scale=1.00, maximum-scale=2.00, minimum-scale=1.00">-->
+        <!--<meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
+    </head>
+
+    <!--body-->
+    <body>
+    <!--header-->
+    <!--1. Using flex and margin-->
+        <nav>
+            <ul>
+                <li>ONE</li>
+                <li>TWO</li>
+                <li>THREE</li>
+                <li class="logo">LOGO</li>
+                <li class="push" >FOUR</li>
+                <li>FIVE</li>
+                <li>SIX</li>
+            </ul>
+        </nav>
+
+
+
+    <!--Using only flex-->
+    <body>
+        <div class="header">
+            <div class="first">
+                <ul>
+                    <li>ONE</li>
+                    <li>TWO</li>
+                    <li>THREE</li>
+                </ul>
+            </div>
+            <div class="second">LOGO</div>
+            <div class="third">
+                <ul>
+                    <li>FOURTH</li>
+                    <li>FIFTH</li>
+                    <li>SIXTH</li>
+                </ul>
+            </div>
+        </div>
+    </body>
+</html>
