--- a/flex/03-flex/03-flex.html
+++ b/flex/03-flex/03-flex.html
@@ -5,7 +5,7 @@
     <head lang="en">
         <title>Common Header Style</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=display-width, initail-scale=1.0">
+        <meta name="viewport" content="width=display-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link rel="stylesheet" href="./styles.css">
     </head>
