--- a/flex/04-flex/04-flex.html
+++ b/flex/04-flex/04-flex.html
@@ -13,7 +13,6 @@
     <body>
         <h1>Introduction !</h1>
         <!--Unalligned version (now corrected)-->
-        <h2>First method</h2>
         <div class="test">
             <div><img src="./resources/berry.png" alt="berry"><br />Here are some berries, looks quite juicy</div>
             <div><img src="./resources/broccoli.png" alt="broccoli"><br/>Here is a broccoli, Healthy!!! RIGHT</div>
@@ -21,7 +20,6 @@
             <div><img src="./resources/vegetables.png" alt="vegetable"><br />Ok, now there are so many vegetables here I don't know what to say</div>
         </div>
         <!--Corrected version-->
-        <h2>Second method</h2>
         <div class="info" >
             <div>
                 <img src="./resources/berry.png" alt="berry">
@@ -39,6 +37,34 @@
                 <img src="./resources/vegetables.png" alt="vegetable">
                 <p>Ok, now there are so many vegetables here I don't know what to say</p>
             </div>
+        </div>
+        <!--Top version-->
+        <h1 class="head-top">Introduction !! (TOP-model)</h1>
+        <div class="top">
+            <div class="information">
+                <img src="./resources/berry.png" alt="berry">
+                <div class="text">Here is a berry, looks quite tempting and delicious</div>
+            </div>
+            <div class="information">
+                <img src="./resources/broccoli.png" alt="broccoli">
+                <div class="text">Here is a broccoli, Healthy!!! RIGHT</div>
+            </div>
+            <div class="information">
+                <img src="./resources/pumpkins.png" alt="pumkin">
+                <div div class="text">Here is another vegetable, PUMKIN</div>
+            </div>
+            <div class="information">
+                <img src="./resources/vegetables.png" alt="vegetable">
+                <div div class="text">Ok, now there are so many vegetables here I don't know what to say</div>
+            </div>
+        </div>
+
+
+
+        <!--Footer-->
+        <div class="footer">
+            <div>Icons made by <a href="" title="Icongeek26">Icongeek26|laura|kamino</a> from <a href="https://www.pixabay.com/" title="Pixabay">www.pixabay.com</a></div>
+            <div>Exercise provided by <a href="" title="TOP">The Odin Project</a> from <a href="www.theodinproject.com" title="TOP">www.theodinproject.com</a></div>
         </div>
     </body>
 </html>
