--- a/flex/05-flex/05-flex.html
+++ b/flex/05-flex/05-flex.html
@@ -18,8 +18,8 @@
           <div class="close-button">✖</div>
         </div>
         <div class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur excepturi id soluta, numquam minima rerum doloremque eveniet aspernatur beatae commodi. Cupiditate recusandae ad repellendus quidem consectetur sequi amet aspernatur cumque!</div>
-        <button class="continue">Continue</button>
-        <button class="cancel">Cancel</button>
+        <a href="../03-flex/03-flex.html"><button class="continue">Continue</button></a>
+        <a href="../06-flex/06-flex.html"><button class="cancel">Cancel</button></a>
       </div>
     </div>
   </body>
