intialized index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <a href="./01-flex/01-flex.html">01-flex</a>
-        <a href="./02-flex/02-flex.html">02-flex</a>
-        <a href="./03-flex/03-flex.html">03-flex</a>
-        <a href="./04-flex/04-flex.html">04-flex</a>
-        <a href="./05-flex/05-flex.html">05-flex</a>
-        <a href="./06-flex/06-flex.html">06-flex</a>
-        <a href="./07-flex/07-flex.html">07-flex</a>
+        <a href="./flex/01-flex/01-flex.html">01-flex</a>
+        <a href="./flex/02-flex/02-flex.html">02-flex</a>
+        <a href="./flex/03-flex/03-flex.html">03-flex</a>
+        <a href="./flex/04-flex/04-flex.html">04-flex</a>
+        <a href="./flex/05-flex/05-flex.html">05-flex</a>
+        <a href="./flex/06-flex/06-flex.html">06-flex</a>
+        <a href="./flex/07-flex/07-flex.html">07-flex</a>
     </body>
 </html>
