--- a/flex/07-flex/07-flex.html
+++ b/flex/07-flex/07-flex.html
@@ -11,7 +11,7 @@
     </head>
     <!--body-->
     <body>
-        <div class="header">My Awesome Web Page</div>
+        <div class="header">My Awesome Web1 Page</div>
 
         <div class="content">
             <ul class="menu">
