--- a/flex/07-flex/prv-sol/07-flex.html
+++ b/flex/07-flex/prv-sol/07-flex.html
@@ -1,25 +1,26 @@
-<!--00-flex.html-->
+<!--07-flex.html-->
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>flex-CSS</title>
+<html lang="en">
+    <!--head-->
+    <head> 
+        <title>Web Page Holy Grail</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <link rel="stylesheet" href="./07-styles.css">
+        <meta name="vewport" content="width=device-width, intial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
+        <link rel="stylesheet" href="./styles.css">
     </head>
+    <!--body-->
     <body>
-        <div class="header">My Awseome Website</div>
-        <div class="container">
-            <div class="one">
-                <ul>
-                    <li>🌟-link one</li>
-                    <li>🌎-link two</li>
-                    <li>🍟-link three</li>
-                    <li>🎉-link four</li>
-                </ul>
-            </div>
-            <div class="two">
+        <div class="header">My Awesome Web1 Page</div>
+
+        <div class="content">
+            <ul class="menu">
+                <li>🌟-link one</li>
+                <li>🌎-link two</li>
+                <li>🍟-link three</li>
+                <li>🎉-link four</li>
+            </ul>
+            <div class="pages">
                 <div class="blocks"><a>Page1</a><div class="pg-con">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div></div>
                 <div class="blocks"><a>Page2</a><div class="pg-con">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div></div>
                 <div class="blocks"><a>Page3</a><div class="pg-con">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div></div>
@@ -28,6 +29,11 @@
                 <div class="blocks"><a>Page6</a><div class="pg-con">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div></div>
             </div>
         </div>
-        <div class="footer"><a href="#">The odin project</a></div>
+
+        <div class="footer"><a href="https://www.theodinproject.com/">The odin project🎓</a>
+            <div class="style1"></div>
+        </div>
+        
+        
     </body>
 </html>
