--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="./flex/04-flex/04-flex.html">04-flex</a>
         <a href="./flex/05-flex/05-flex.html">05-flex</a>
         <a href="./flex/06-flex/06-flex.html">06-flex</a>
-        <a href="./flex/07-flex/07-flex.html">07-flex</a>
+        <a href="./flex/07-flex/prv-sol/07-flex.html">07-flex</a>
+        <a href="./flex/07-flex/07-flex.html">07-flex-rev</a>
     </body>
 </html>
